# bazel-hello-world-py

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  hello.py  lib.py  one.py  two.py
python/: skyframe.py  skyframe_v2.py
